<resources>
    <string name="search_printer">Поиск принтера</string>
    <string name="order_picker">Сборщик заказов</string>
    <string name="search_bluetooth_printer">Выполняется поиск\n bluetooth-принтера</string>
    <string name="scan_printer_code_to_connect">Сканировать код принтера для подключения</string>
    <string name="printer_name_and_id">Наименование и ID принтера</string>
    <string name="printer_is_not_responding">Данный принтер занят или не отвечает</string>
    <string name="printer_connected">Принтер успешно подключен</string>
    <string name="printer_not_found">Принтер не найден. Перейти к настройкам bluetooth?</string>
    <string name="go_to">Перейти</string>
    <string name="permissions_error">Для подключения устройства нужны разрешения. Перейти в настройки приложения?</string>
    <string name="bluetooth_disabled_error">Для подключения устройства нужно включить Bluetooth. Перейти в настройки?</string>
    <string name="connect_printer">Подключите принтер</string>
    <string name="scan_printer">Сканирование ID принтера</string>
    <string name="wait_for_printer_scan">Ожидание сканирования\nштрих-кода принтера</string>
    <string name="scan_barcode">ОТСКАНИРУЙТЕ ШТРИХ-КОД НА\nЗАДНЕЙ КРЫШКЕ ПРИНТЕРА</string>
    <string name="barcode_is_wrong">Штрих-код неверный!</string>
    <string name="enter_without_printer_connect">Войти без подключения к принтеру?</string>
    <string name="enter">Войти</string>
    <string name="cancel">Отменить</string>
    <string name="exit_and_stop_work">Выйти из приложения и завершить работу по сборке заказов?</string>
    <string name="complete">Завершить</string>
    <string name="new_orders">Новые заказы</string>
    <string name="total_new_orders">ВСЕГО НОВЫХ ЗАКАЗОВ</string>
    <string name="total_assembly_time">ОБЩЕЕ ВРЕМЯ НА СБОРКУ</string>
    <string name="date_and_time">Дата/Время</string>
    <string name="order_number">№ заказа</string>
    <string name="order_number_is">Заказ № %1$s</string>
    <string name="order_number_is_uppercase">ЗАКАЗ №</string>
    <string name="sku_count">SKU, шт.</string>
    <string name="take_to_work">Взять в работу</string>
    <string name="connecting">Идёт подключение…</string>
    <string name="invalid_username">Заполните имя пользователя</string>
    <string name="invalid_password">Введите пароль</string>
    <string name="login_failed">Не удалось войти!</string>
    <string name="username">Имя пользователя</string>
    <string name="password">Пароль</string>
    <string name="dir">Каталог</string>
    <string name="internet_is_disabled">Отсутствует подключение к интернету. Для авторизации подключите интернет</string>
    <string name="underway">В работе</string>
    <string name="packed">Собрано</string>
    <string name="cancelled">Отменённые</string>
    <string name="transferred_to_courier">Передано курьеру</string>
    <string name="logout">Выйти</string>
    <string name="settings">Настройки</string>
    <string name="already_have_an_order">У вас уже есть заказ в работе</string>
    <string name="order_accepted_in">Заказ %1$s принят в работу %2$s в %3$s</string>
    <string name="to_order">К заказу</string>
    <string name="order_cannot_be_taken_to_work">Заказ %1$s не может быть взят в работу</string>
    <string name="no_internet_connection">Нет подключения к сети интернет</string>
    <string name="you_have_pending_orders">У вас есть незавершенные заказы. Выйти из приложения и завершить работу по сборке заказов?</string>
    <string name="data_loading_error_no_internet">Ошибка загрузки данных.\nНет подключения к сети интернет</string>
    <string name="number_things">%1$s шт.</string>
    <string name="number_kilograms">%1$s КГ</string>
    <string name="number_hours">%1$s ч</string>
    <string name="number_minutes">%1$s мин</string>
    <string name="no_underway_orders">У вас нет заказов \"В работе\"</string>
    <string name="take_another_order_to_underway">Возьмите \"В работу\" другой заказ</string>
    <string name="go_back">Назад</string>
    <string name="order_collection">Сбор заказа</string>
    <string name="order_specification">Спецификация заказа</string>
    <string name="scan_package_to_start">ОТСКАНИРУЙТЕ ПАКЕТ, ЧТОБЫ ПЕРЕЙТИ К СБОРКЕ ЗАКАЗА</string>
    <string name="waiting_for_package_scan">Ожидание сканирования пакета</string>
    <string name="sku_without_package">SKU без пакета</string>
    <string name="fully_assembled_sku">ПОЛНОСТЬЮ СОБРАНО SKU</string>
    <string name="total_goods_collected">ВСЕГО СОБРАНО ТОВАРОВ</string>
    <string name="from_things">%1$s из %2$s</string>
    <string name="from_things_pcs">%1$s из %2$s шт.</string>
    <string name="from_things_kg">%1$s из %2$s кг.</string>
    <string name="from_is">%1$s из %2$s</string>
    <string name="category">Категория</string>
    <string name="name_and_code">Наименование и код</string>
    <string name="number_in_order">Кол-во в заказе</string>
    <string name="waiting_for_product_scan">Ожидание сканирования товара</string>
    <string name="enter_code_manually">Ввод кода вручную</string>
    <string name="product_no_found">Товар отсутствует</string>
    <string name="naming">Наименование</string>
    <string name="next_product_in_line">Следующий товар в очереди</string>
    <string name="this_product_is_not_in_order">Данного товара нет в заказе</string>
    <string name="verify_the_scanned_barcode_is_correct">Проверьте корректность отсканированного штрих-кода</string>
    <string name="product_scanned_out_of_turn">Товар отсканирован вне очереди</string>
    <string name="follow_the_recommended_ordering_sequence">Следуйте рекомендованной последовательности заказа</string>
    <string name="skip_temporarily">Временно пропустить</string>
    <string name="product_code">Код товара</string>
    <string name="product_weight">Вес товара</string>
    <string name="enter_product_code">Введите код товара</string>
    <string name="enter_weight_code">Введите вес товара</string>
    <string name="next">Далее</string>
    <string name="indicate_the_quantity_or_scan">Укажите количество товара\nили отсканируйте товар несколько раз</string>
    <string name="number_scanned_products">Количество отсканированного товара</string>
    <string name="add_another_piece_item">Добавить еще один\nштучный товар</string>
    <string name="add_another_weight_item">Добавить еще один\nвесовой товар</string>
    <string name="add_weight">Добавить вес</string>
    <string name="empty_char">-</string>
    <string name="weight_scanned_products">Вес отсканированного товара</string>
    <string name="quantity_of_marked_products">Кол-во товара маркируемого через весы</string>
    <string name="scan_things_product_to_add">Отсканируйте штучный товар для добавления в данную товарную позицию</string>
    <string name="scan_weight_product_to_add">Отсканируйте весовой товар для добавления в данную товарную позицию</string>
    <string name="enter_manually">Ввести вручную</string>
    <string name="assembly_as_a_product_without_a_package">СОБРАТЬ КАК ТОВАР БЕЗ ПАКЕТА</string>
    <string name="weight_product_error">Ошибка количества весового товара</string>
    <string name="things_product_error">Ошибка количества штучного товара</string>
    <string name="amount_is_more_than_ten_percent">Введенное количество товара больше количества данного товара в заказе более чем на 10%</string>
    <string name="specify_the_number_of_packages">Укажите количество грузовых мест</string>
    <string name="to_collect">Собрать</string>
    <string name="not_enough_weight">Недостаточное кол-во весового товара</string>
    <string name="not_enough_things">Недостаточное кол-во штучного товара</string>
    <string name="not_enough_common_things">Недостаточное количество товара</string>
    <string name="are_you_sure_you_want_to_collect_not_in_full">Вы уверены, что хотите собрать товар не в полном объеме?</string>
    <string name="assembly_time">Время сборки: %1$s мин.</string>
    <string name="queue">В очереди</string>
    <string name="refresh_list">Обновить список</string>
    <string name="save">Сохранить</string>
    <string name="label_printing">Идет печать этикетки</string>
    <string name="printer_not_available">Принтер недоступен</string>
    <string name="connect_the_printer_and_try_again">Подключите принтер и попробуйте снова</string>
    <string name="connect">Подключить</string>
    <string name="wrong_package_code">Неверный код пакета</string>
    <string name="try_to_update_code_list_or_scan_another_one">Попробуйте обновить спискок кодов или отсканируйте другой код</string>
    <string name="update">Обновить</string>
    <string name="enter_the_app">Войти в приложение</string>
    <string name="specification_order">Спецификация заказа</string>
    <string name="cargo_space_number">КОЛ-ВО ПАКЕТОВ/МЕСТ</string>
    <string name="scan_for_quickly_search">ОТСКАНИРУЙТЕ ТОВАР ДЛЯ БЫСТРОГО ПОИСКА</string>
    <string name="goods_ordered">Собрано товаров</string>
    <string name="complete_order_collection">Завершить сбор заказа</string>
    <string name="change_number_without_scan">Изменить кол-во без сканирования</string>
    <string name="details">Подробная информация</string>
    <string name="request_stock_balance">Запросить остаток на складе</string>
    <string name="order_opened">Заказ открыт</string>
    <string name="order_address">Адрес заказа</string>
    <string name="number_of_the_cargo_spaces">Кол-во пакетов/грузовых мест</string>
    <string name="fully_packed_sku">Полностью собрано SKU</string>
    <string name="total_packed_products">Всего собрано товаров</string>
    <string name="not_all_products_are_collected_in_the_order">В заказе собраны не все товары!</string>
    <string name="anyway_move_to_the_collected">Все равно переместить товар в раздел \"Собрано\"?</string>
    <string name="order_collection_is_completed">Сбор заказа завершен и перемещен в раздел “Собрано”!</string>
    <string name="order_number_and_completed_time">Заказ №%1$s\nДата/Время завершения: %2$s</string>
    <string name="order_number_and_transferred_time">Заказ №%1$s\nДата/Время передачи: %2$s</string>
    <string name="to_new_orders">К новым заказам</string>
    <string name="no_connection_to_server">Нет связи с сервером</string>
    <string name="Unable_to_retrieve_stock_balances">Невозможно получить остатки товара на складе</string>
    <string name="collected_orders">Собранные заказы</string>
    <string name="cancelled_orders">Отменённые заказы</string>
    <string name="enter_order_number">Введите номер заказа</string>
    <string name="scan_label_for_search">ОТСКАНИРУЙТЕ ЛЮБУЮ ЭТИКЕТКУ ИЗ ЗАКАЗА\nДЛЯ БЫСТРОГО ПОИСКА ЗАКАЗА</string>
    <string name="no_order_with_this_code">Нет заказа с таким кодом</string>
    <string name="transfer_order_to_the_courier">Передача заказа курьеру</string>
    <string name="label_scan">ОТСКАНИРОВАНО ЭТИКЕТОК</string>
    <string name="scan_all_labels_in_the_order">ОТСКАНИРУЙТЕ ВСЕ ЭТИКЕТКИ В ЗАКАЗЕ</string>
    <string name="transfer_to_the_courier">Передать курьеру</string>
    <string name="bag_cargo_place_label">Пакеты/Места/Этикетки</string>
    <string name="transferred_orders">Переданные заказы</string>
    <string name="open_bag_or_cargo_space">Открыть пакет/место</string>
    <string name="transferred_to_the_courier_order">Переданный курьеру заказ</string>
    <string name="collected_order_spec">Спец-ия собранного заказа</string>
    <string name="open_pocket">Открыть пакет</string>
    <string name="url">Адрес</string>
    <string name="server_header">Сервер</string>
    <string name="preferences_server">preferences_server</string>
    <string name="preferences_updateapp_server">preferences_updateapp_server</string>
    <string name="preferences_updateapp_user">preferences_updateapp_user</string>
    <string name="preferences_updateapp_password">preferences_updateapp_password</string>
    <string name="preferences_updateapp_dir">preferences_updateapp_dir</string>
</resources>