<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="by.imlab.sosedi.ui.orderslist.OrdersListFragment">

    <FrameLayout
        android:id="@+id/searchLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_28sdp"
        android:layout_marginVertical="@dimen/_24ssp"
        android:background="@android:color/white"
        android:elevation="@dimen/_6sdp">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/collected_order_search_field_background"
            android:outlineProvider="bounds"
            app:closeIcon="@drawable/ic_clear"
            app:iconifiedByDefault="false"
            app:queryBackground="@android:color/transparent"
            app:queryHint="@string/enter_order_number"
            app:searchHintIcon="@null"
            app:searchIcon="@drawable/ic_search" />
    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/totalInfoBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_28sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/totalNewOrdersText"
            style="@style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/total_new_orders"
            android:textColor="@color/colorTextPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/totalNewOrdersCount"
            style="@style/TextAppearance.Regular.Big.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="13 шт." />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/totalAssemblyTimeText"
            style="@style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/total_assembly_time"
            android:textColor="@color/colorTextPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/totalNewOrdersText" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/totalAssemblyTimeCount"
            style="@style/TextAppearance.Regular.Big.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/totalNewOrdersCount"
            tools:text="2 ч 35 мин" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/hasUnderway"
        style="@style/TextAppearance.Regular.Big"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/already_have_an_order"
        android:layout_gravity="center"
        android:textColor="@color/colorTextError"
        android:visibility="gone"
        tools:text="У вас уже есть заказ в работе" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ordersListBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_32sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@id/totalInfoBlock">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dateAndTimeText"
            style="@style/TextAppearance.Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_28sdp"
            android:text="@string/date_and_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/orderNumberText"
            style="@style/TextAppearance.Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_200sdp"
            android:text="@string/order_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/skuCountText"
            style="@style/TextAppearance.Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_28sdp"
            android:text="@string/sku_count"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/errorMessage"
        style="@style/TextAppearance.Medium.Big"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_170sdp"
        android:gravity="center_horizontal"
        android:text="@string/data_loading_error_no_internet"
        android:textColor="@color/colorTextBigError"
        android:visibility="gone" />

<!--    <by.imlab.sosedi.ui.orderslist.OrdersListMainItem
        android:id="@+id/orderMainItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/orders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/order_item" />

</LinearLayout>